# enterprise-rag-agent-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  enterprise-rag-agent-platform.md  pyproject.toml
docs/ready/: celery.md  docker.md  fastapi.md  langgraph.md  llm-serving.md  milvus.md  monitoring.md  nginx.md  postgresql.md  python-async.md  rag-fundamentals.md  redis.md  sqlalchemy.md
infra/prometheus/: prometheus.yml
plan/: 00-구현-로드맵-개요.md  01-프로젝트-초기-세팅과-핵심-인프라.md  02-핵심-인프라-패턴-예외-미들웨어-DI.md  03-데이터베이스-레이어-ORM과-리포지토리.md  04-RAG-파이프라인-인제스트와-검색.md  05-LLM-서빙-라우팅-캐시-스트리밍.md  06-AI-에이전트-LangGraph-워크플로우.md  07-API-엔드포인트와-Celery-워커.md  08-인프라-Docker-모니터링-테스트.md
src/: config.py  main.py
src/agent/: __init__.py
src/agent/nodes/: __init__.py
src/agent/tools/: __init__.py
src/api/: __init__.py  dependencies.py  router.py
src/api/endpoints/: __init__.py  health.py
src/api/schemas/: __init__.py
src/core/: __init__.py  exceptions.py  logging.py  milvus.py  redis.py
src/db/: __init__.py  session.py
src/db/models/: __init__.py
src/db/repositories/: __init__.py
src/llm/: __init__.py
src/rag/: __init__.py
src/rag/chunkers/: __init__.py
src/rag/embeddings/: __init__.py
src/rag/extractors/: __init__.py
src/rag/vectorstore/: __init__.py
src/workers/: __init__.py
src/workers/tasks/: __init__.py
