[project]
name = "enterprise-rag-agent-platform"
version = "0.1.0"
description = "Enterprise RAG Agent Platform with FastAPI, Milvus, and LangGraph"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # Celery
    "celery[redis]>=5.4.0",

    # Vector DB
    "pymilvus>=2.5.0",

    # LLM & Agent
    "openai>=1.58.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.28.0",

    # Embedding & NLP
    "tiktoken>=0.8.0",

    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",

    # Document Processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
